--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,6 @@ setup.py
 start.py
 pikonekbin.py
 templates/public/portal_image/**
+pikonek/pytransform/*.c
+pikonek/pytransform/*.py
+pikonek/*.py
