--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ python-iptables==1.0.0
 python-socketio==5.7.1
 PyYAML==6.0
 RPi.GPIO==0.7.1
+speedtest-cli==2.1.3
 SQLAlchemy==1.4.40
 tcconfig==0.25.2
 urllib3==1.26
