--- a/configs/01-pikonek.nginx.conf
+++ b/configs/01-pikonek.nginx.conf
@@ -25,13 +25,13 @@ server {
   
   # Redirect Captive Portal
   if ( $http_user_agent ~* 'CaptiveNetworkSupport' ) {
-    return 302 http://pi.konek/captiveportal;
+    return 302 http://pi.konek;
   }
 
 
   # android 
   location /generate_204 {
-    return 302 http://pi.konek/captiveportal;
+    return 302 http://pi.konek;
   }
 
 }
@@ -41,5 +41,5 @@ server {
   listen 80;
   listen [::]:80;
   server_name captive.apple.com connect.rom.miui.com connectivitycheck.android.com connectivitycheck.gstatic.com clients3.google.com connectivitycheck.platform.hicloud.com;
-  return 302 http://pi.konek/captiveportal;
+  return 302 http://pi.konek;
 }
